Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-10-20 (SVN):
    * console.c (Con_MessageMode_f, Con_MessageMode2_f): do not set the
      messagemode when not really connected.

2012-10-20 (SVN):
    * allow 8x fsaa in the menu system and the gtk launcher.
    * updated version date stamp to 2012-10-20.

2012-10-15 (SVN):
    * fixed hexenworld after r4989. updated date stamp to 2012-10-15.

2012-10-15 (SVN):
    * Another approach at fixing key_dest.

2012-10-11 (SVN):
    * gl_vidnt.c, vid_mgl4.c, vid_win.c (MapKey): adjust gamekey after
      r4987.
    * updated version date stamp to 2012-10-11.

2012-10-11 (SVN):
    * revert r4374, some keyboard input tweaks (from quakespasm).

2012-10-10 (SVN):
    * moved cfg_unbindall and its registration to cl_main.c. moved the
      config.cfg write of unbindall to Key_WriteBindings(). documented
      the new behavior in the release notes.
    * updated version date stamp to 2012-10-10.

2012-10-10 (SVN):
    * hexen2/host.c, hexenworld/client/cl_main.c: unbindall before
      loading stored bindings (configurable by new cvar cfg_unbindall,
      enabled by default.)
    * hexenworld/client/keys.c (Key_WriteBindings): quote "key".

2012-10-04 (SVN):
    * sys_amiga.c: fixed Sys_GetClipboardData(), text pasting now works.
    * updated version date stamp to 2012-10-04.

2012-10-03 (SVN):
    * snd_sun.c: include ioctl.h before audioio.h. changed C++ comments
      into C-style comments.
    * snd_alsa.c: changed C++ comments into C-style comments.

2012-10-01 (SVN):
    * client.hc, invntory.hc: artifact_active/artifact_low setting and
      clearing of ART_TOMEOFPOWER, ART_INVINCIBILITY, ART_INVISIBILITY,
      and ART_HASTE are now done simply by using BITSET and BITCLR ops.

2012-10-01 (SVN):
    * h2/cube.hc (cube_find_target): fixed parens in the if construct.
      don't choose a monster whose controller is the same as the cube's